syntax = "proto3";

package katium.client.qq.packet;

option java_package = "katium.client.qq.network.pb";
option java_outer_classname = "PbD50";

message D50Request {
  int64 appID = 1;
  int32 maxPackageSize = 2;
  int32 startTime = 3;
  int32 startIndex = 4;
  int32 requestNumber = 5;
  repeated int64 uinList = 6;
  int32 musicSwitch = 91001;
  int32 mutualMarkAlienation = 101001;
  int32 mutualMarkScore = 141001;
  int32 ksingSwitch = 151001;
  int32 mutualMarkLbsshare = 181001;
}
