syntax = "proto3";

package katium.client.qq.packet;

option java_package = "katium.client.qq.network.pb";
option java_outer_classname = "PbSystemMessages";

message PullSystemMessagesRequest {
  int32 messageNumber = 1;
  int64 latestFriendSequence = 2;
  int64 latestGroupSequence = 3;
  int32 version = 4;
  int32 checkType = 5;
  FlagInfo flag = 6;
  int32 language = 7;
  bool isGetFriendRibbon = 8;
  bool isGetGroupRibbon = 9;
  int64 friendMessageTypeFlag = 10;
  int32 messageType = 11;
}

message FlagInfo {
  int32 groupKickAdmin = 1;
  int32 groupHiddenGroup = 2;
  int32 groupWordingDown = 3;
  int32 friendGetBusiCard = 4;
  int32 groupGetOfficialAccount = 5;
  int32 groupGetPayInGroup = 6;
  int32 friendDiscuss2ManyChat = 7;
  int32 groupNotAllowJoinGroupInviteNotFriend = 8;
  int32 friendNeedWaiting = 9;
  int32 friendUint32NeedAllUnread = 10;
  int32 groupNeedAutoAdminWording = 11;
  int32 groupGetTransferGroupFlag = 12;
  int32 groupGetQuitPayGroupFlag = 13;
  int32 groupSupportInviteAutoJoin = 14;
  int32 groupMaskInviteAutoJoin = 15;
  int32 groupGetDisbandedByAdmin = 16;
  int32 groupGetC2cInviteJoinGroup = 17;
}

message PullSystemMessagesResponse {
  PushHeader head = 1;
  int32 unreadFriendsCount = 2;
  int32 unreadGroupsCount = 3;
  int64 latestFriendSequence = 4;
  int64 latestGroupSequence = 5;
  int64 followingFriendSequence = 6;
  int64 followingGroupSequence = 7;
  repeated StructMessage friendMessages = 9;
  repeated StructMessage groupMessages = 10;
  StructMessage ribbonFriend = 11;
  StructMessage ribbonGroup = 12;
  string messageDisplay = 13;
  string groupMessageDisplay = 14;
  int32 over = 15;
  int32 checkType = 20;
  string gameNick = 100;
  bytes undecidForQim = 101;
  int32 unReadCount3 = 102;
}

message PushHeader {
  int32 result = 1;
  string message = 2;
}

message StructMessage {
  int32 version = 1;
  int32 messageType = 2;
  int64 messageSequence = 3;
  int64 messageTime = 4;
  int64 requesterUin = 5;
  int32 unreadFlag = 6;
  SystemMessage message = 50;
}

message SystemMessage {
  int32 subType = 1;
  string title = 2;
  string description = 3;
  string addition = 4;
  string source = 5;
  string decided = 6;
  int32 sourceID = 7;
  int32 subSourceID = 8;
  repeated SystemMsgAction actions = 9;
  int64 groupCode = 10;
  int64 actionUin = 11;
  int32 groupMessageType = 12;
  int32 groupInviterRole = 13;
  FriendInfo friendInfo = 14;
  SGroupInfo groupInfo = 15;
  int64 actorUin = 16;
  string actorDescription = 17;
  string additionList = 18;
  int32 relation = 19;
  int32 requestSubType = 20;
  int64 cloneUin = 21;
  int64 discussUin = 22;
  int64 eimGroupId = 23;
  InvitationInfo invitationInfo = 24;
  PayGroupInfo payGroupInfo = 25;
  int32 sourceFlag = 26;
  bytes gameNick = 27;
  bytes gameMsg = 28;
  int32 groupFlagExt3 = 29;
  int64 groupOwnerUin = 30;
  int32 doubtFlag = 31;
  bytes warningTips = 32;
  bytes nameMore = 33;
  int32 requestUinFaceID = 50;
  string requestUinNick = 51;
  string groupName = 52;
  string actionUinNick = 53;
  string messageQna = 54;
  string messageDetail = 55;
  int32 groupExtFlag = 57;
  string actorUinNick = 58;
  string pictureUrl = 59;
  string cloneUinNick = 60;
  string requestUinBusinessCard = 61;
  string eimGroupIdName = 63;
  string requestUinPreRemark = 64;
  string actionUinQqNick = 65;
  string actionUinRemark = 66;
  int32 requestUinGender = 67;
  int32 requestUinAge = 68;
  int32 c2cInviteJoinGroupFlag = 69;
  int32 cardSwitch = 101;
}

message SystemMsgAction {
  string name = 1;
  string result = 2;
  int32 action = 3;
  SystemMsgActionInfo actionInfo = 4;
  string detailName = 5;
}

message SystemMsgActionInfo {
  int32 type = 1;
  int64 groupCode = 2;
  bytes sig = 3;
  string message = 50;
  int32 groupID = 51;
  string remark = 52;
  bool blacklist = 53;
  AddFrdSNInfo addFrdSNInfo = 54;
}

message AddFrdSNInfo {
  int32 notSeeDynamic = 1;
  int32 setSn = 2;
}

message FriendInfo {
  string jointFriend = 1;
  string blacklist = 2;
}

message SGroupInfo {
  int32 groupAuthType = 1;
  int32 displayAction = 2;
  string alert = 3;
  string detailAlert = 4;
  string otherAdminDone = 5;
  int32 appPrivilegeFlag = 6;
}

message InvitationInfo {
  int32 sourceType = 1;
  int64 sourceCode = 2;
  int32 waitState = 3;
}

message PayGroupInfo {
  int64 joinGroupTime = 1;
  int64 quitGroupTime = 2;
}
